Inline css, update name in licence

--- a/RazorTemplates/RazorTemplates.csproj
+++ b/RazorTemplates/RazorTemplates.csproj
@@ -11,4 +11,8 @@
   <ItemGroup>
     <ProjectReference Include="..\Domain\WhatsAppConvertor.Domain.csproj" />
   </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Helpers\" />
+  </ItemGroup>
 </Project>
