--- a/WhatsAppConvertor/Properties/launchSettings.json
+++ b/WhatsAppConvertor/Properties/launchSettings.json
@@ -2,10 +2,10 @@
   "profiles": {
     "WhatsAppConvertor": {
       "commandName": "Project",
-      "dotnetRunMessages": true,
       "environmentVariables": {
         "DOTNET_ENVIRONMENT": "Development"
-      }
+      },
+      "dotnetRunMessages": true
     }
   }
 }
