Add copy media and link files to html views

--- a/WhatsAppConvertor/appsettings.json
+++ b/WhatsAppConvertor/appsettings.json
@@ -7,8 +7,16 @@
   },
   "Export": {
     "Directory": "./Output",
-    "Json": true,
-    "Text": true,
-    "Html": true
+    "Json": {
+      "enabled": true
+    },
+    "Text": {
+      "enabled": true
+    },
+    "Html": {
+      "enabled": true,
+      "copyMedia": false,
+      "mediaPath": ""
+    }
   }
 }
