--- a/WhatsAppConvertor/WhatsAppConvertor.csproj
+++ b/WhatsAppConvertor/WhatsAppConvertor.csproj
@@ -13,6 +13,7 @@
     <PackageReference Include="Microsoft.Data.Sqlite" Version="7.0.4" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="7.0.1" />
     <PackageReference Include="Razor.Templating.Core" Version="1.8.0" />
+    <PackageReference Include="TestableIO.System.IO.Abstractions" Version="19.2.4" />
   </ItemGroup>
 
   <ItemGroup>
