--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,19 @@ appsettings.Development.json
 *.db
 [Oo]utput/
 
+## Vscode
+.vscode/
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+!.vscode/*.code-snippets
+
+# Local History for Visual Studio Code
+.history/
+
+# Built Visual Studio Code Extensions
+*.vsix
 
 # User-specific files
 *.rsuser
