--- a/WhatsAppConvertor/appsettings.json
+++ b/WhatsAppConvertor/appsettings.json
@@ -18,5 +18,11 @@
       "copyMedia": false,
       "mediaPath": ""
     }
+  },
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
+    }
   }
 }
